--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -388,12 +388,6 @@ p {
     color: #555;
     margin-bottom: 10px; 
 }
-.question div {
-    display: flex;
-    flex-direction: column; 
-    gap: 10px; 
-}
-
 .question label {
     display: flex; 
     align-items: center; 
@@ -402,7 +396,12 @@ p {
     color: #555;
     margin-bottom: 10px;
 }
-
+.question div {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start; /* Align items to the start of the container */
+}
 
 .question input[type="radio"] {
     margin-right: 10px; 
@@ -412,7 +411,7 @@ p {
 
 .question input[type="radio"]:checked {
     background-color: #4CAF50; 
-}
+} */
 
 .btn-primary, .btn-secondary, .btn-success {
     justify-content: center;
