--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -369,7 +369,7 @@ p {
         text-align: center;
     }
 }
-.quiz-content {
+/* .quiz-content {
 
     display:flex;
     align-items: center; 
@@ -401,7 +401,7 @@ p {
     flex-direction: column;
     gap: 10px;
     align-items: flex-start; /* Align items to the start of the container */
-}
+/* }
 
 .question input[type="radio"] {
     margin-right: 10px; 
@@ -411,7 +411,7 @@ p {
 
 .question input[type="radio"]:checked {
     background-color: #4CAF50; 
-} */
+}  */ 
 
 .btn-primary, .btn-secondary, .btn-success {
     justify-content: center;
@@ -449,7 +449,7 @@ button {
 }
 
 .btn-primary:hover, .btn-secondary:hover, .btn-success:hover {
-    background-color:darkgray; 
+    background-color:rgb(99, 97, 97); 
 }
 
 .result {
@@ -458,7 +458,7 @@ button {
     font-weight: bold;
     text-align: center;
 }
-.correct {
+/* .correct {
     color: green;
     font-weight: bold;
 }
@@ -472,7 +472,7 @@ button {
     color: rgb(128,0,32); 
     font-size: 16px;
     margin-top: 20px;
-}
+} */
 
 #login-warning {
     display: none;
