--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -52,15 +52,16 @@ p {
 .person-icon {
     width: auto;
     height: 50px;
-    background-color: #eee;
+    background-color: #a8a5a5;
     border-radius: 50%;
     overflow: hidden;
 }
 .flag-icon {
-    width: 50px;
+    width: auto;
     height: 50px;
-    background-color: #eee;
+    background-color: #a8a5a5;
     border-radius: 50%;
+    overflow: hidden;    
     margin-left: 20px;
     overflow: hidden;
 }
@@ -68,11 +69,13 @@ p {
 .person-icon img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     
 }
 .flag-icon img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     
 }
 
