--- a/backend/frontend/login.css
+++ b/backend/frontend/login.css
@@ -3,20 +3,29 @@
     width: 100%;
     padding: 20px;
     background-color: #CECDCD;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0;
     display: flex;
-    flex-direction: column; /* Stack content vertically */
-    justify-content: flex-start; /* Align to the top */
-    margin-top: 20px; /* Space at the top */
+    flex-direction: column; 
+    justify-content: flex-start; 
+    margin-top: 20px; 
+}
+.card {
+    background-color: #c0bcbc;
+    padding: 30px 40px; /* Adjust padding for card */
+    margin: 0;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 20px; /* Add gap between sections */
 }
 
-/* Card body containing the form content */
 .card-body {
     background-color: #c0bcbc;
     padding: 30px 40px; /* Adjust padding for card */
     margin: 0;
-    border-radius: 10px;
+    border-radius: 40px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
