--- a/backend/frontend/quiz.css
+++ b/backend/frontend/quiz.css
@@ -179,7 +179,7 @@ h3 {
     cursor: pointer;
     color: #555;
     display: inline-block; 
-    padding-bottom: 5px;   /* Ensures the label and radio button are on the same line */
+    padding-bottom: 5px;
 }
 
 .question input[type="radio"] {
@@ -188,12 +188,6 @@ h3 {
     height: 20px;
     margin-right: 10px; 
     vertical-align: middle; 
-}
-
-.question p {
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 10px;
 }
 
 .quiz-content {    
