--- a/backend/frontend/login.css
+++ b/backend/frontend/login.css
@@ -153,5 +153,5 @@ form button:active {
     
 }
 .login-btn-primary:hover {
-    background-color: darkgray; 
+    background-color: rgb(121, 119, 119);
 }
