--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -114,7 +114,7 @@ p {
 }
 
 .login-register a:hover {
-    background-color: rgb(121, 119, 119);
+    background-color: darkgray
 }
 
 .get-started-btn {
@@ -224,7 +224,8 @@ p {
     width: 250px;
     height: 450px;
     max-width: 100%; 
-    border-radius: 20px;  
+    border-radius: 20px;
+    cursor: pointer;  
 }
 
 #chat-content {
@@ -301,11 +302,9 @@ iframe {
     flex-direction: column; 
     justify-content: center; 
     align-items: center; 
-    text-align: center; 
-    
+    text-align: center;     
     
 }
-
 
 @media (max-width: 768px) {
     .quiz-container {
@@ -326,7 +325,7 @@ iframe {
 .start-quiz-btn {
     display: inline-block;
     text-decoration: none;
-    background-color: black; 
+    background-color: rgb(56, 55, 55); 
     color: white; 
     padding: 15px 30px;
     border-radius: 30px; 
@@ -381,8 +380,7 @@ iframe {
     margin:0 auto;
     border: none;         
     outline: none;     
-    box-shadow: none;
-    
+    box-shadow: none;    
 }
 
 .button-container {
@@ -445,7 +443,7 @@ button {
 }
   
   .logout:hover {
-    background-color:  rgb(121, 119, 119);
+    background-color: darkgray;
 }
 
 .dropdown-menu {   
