--- a/backend/frontend/quiz.css
+++ b/backend/frontend/quiz.css
@@ -136,7 +136,7 @@ h3 {
 }
 
 .logout:hover {
-    background-color: rgb(121, 119, 119);
+    background-color: #b0b0b0; 
 }
 
 .nav-links {
@@ -268,5 +268,5 @@ button {
 }
 
 .btn-primary:hover, .btn-secondary:hover, .btn-success:hover {
-    background-color: rgb(121, 119, 119);
+    background-color: rgb(126, 124, 124);
 }
