--- a/backend/frontend/css/quiz.css
+++ b/backend/frontend/css/quiz.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('quiz_background.png');
+    background-image: url('images/quiz_background.png');
     background-size: cover;      
     background-position: center; 
     background-repeat: no-repeat; 
