--- a/backend/frontend/css/quiz.css
+++ b/backend/frontend/css/quiz.css
@@ -6,8 +6,8 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('/images/quiz_background.png');
-    background-size: cover;      
+    background-image: url('../images/quiz_background.png');
+    background-size: cover;   
     background-position: center; 
     background-repeat: no-repeat; 
     display: flex;
@@ -55,7 +55,7 @@ h3 {
     align-items: center !important ;
     justify-content: flex-start !important ;
     background-color: rgb(102, 100, 100); 
-    padding: 20px 40px !important ; 
+    padding: 10px !important ; 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     height: auto; 
 }
@@ -162,12 +162,16 @@ h3 {
 }
 
 .question {
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, .1), 0px 8px 16px rgba(0, 0, 0, .1);
     display: flex;
     flex-direction: column;  
     gap: 15px;               
     text-align: left;        
-    padding-left: 20px;     
-    margin-bottom: 15px;  
+    padding: 70px;     
+    margin-bottom: 15px; 
+    border-radius: 10px;  
+    background-color: rgb(255, 251, 251,0.8);
+    
 }
 
 .question div {
@@ -201,18 +205,18 @@ h3 {
     background-color: rgb(128,0,32) !important; /* Red when checked */
 }
 
-/* Create the checkmark using ::after pseudo-element */
-.question input[type="radio"]::after {
+
+/* .question input[type="radio"]::after {
     content: '';
     position: absolute;
-    top: 4px;  /* Adjust to place inside the circle */
-    left: 4px; /* Adjust to place inside the circle */
+    top: 4px; 
+    left: 4px;
     width: 10px;
     height: 10px;
-    background-color: white; /* Inner circle color */
-    border-radius: 50%; /* Make it circular */
-    transition: background-color 0.3s ease; /* Smooth transition */
-}
+    background-color: white;
+    border-radius: 50%; 
+    transition: background-color 0.3s ease;
+} */
 
 /* Change inner circle color when the radio is checked */
 .question input[type="radio"]:checked::after {
@@ -226,7 +230,7 @@ h3 {
     justify-content: flex-start; 
     align-items: flex-start;   
     height: 100%;  
-    padding-bottom: 200px;           
+    padding: 100px;           
 }
 
 .btn-primary, .btn-secondary, .btn-success {
@@ -255,7 +259,7 @@ h3 {
     justify-content: flex-start; 
     align-items: flex-start;      
     gap: 5px;                     
-    margin-bottom: 200px;             
+        
     width: 100%;                    
 }
 
